fix bug:4107-aligned view button with project title in projects list

--- a/app/assets/stylesheets/search.scss
+++ b/app/assets/stylesheets/search.scss
@@ -93,6 +93,7 @@
 }
 
 .search-primary-button {
+  margin-top:-2px;
   padding: 5px 20px;
 }
 
